--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DROPBOX_ACCESS_TOKEN=""
-DROPBOX_ACCESS_TOKEN_TEST=""
-LOCAL_DIRECTORY="local_sync_dir"
-REMOTE_DIRECTORY="/remote_sync_dir"
+DROPBOX_ACCESS_TOKEN=abc
+DROPBOX_ACCESS_TOKEN_TEST=abc
+LOCAL_DIRECTORY=local_sync_dir
+REMOTE_DIRECTORY=/remote_sync_dir
